--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
     <body>
         <div class="container">
             <div class="row">
-                <p> TODO write content</p>
+                <p> TODO write content testing</p>
                 <button class="btn btn-danger">Submit</button>
             </div>
         </div>
