--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,11 @@ and open the template in the editor.
     <body>
         <div class="container">
             <div class="row">
-                <p> TODO write content testing</p>
+                <h1>Hello World from bootstrap</h1>
                 <button class="btn btn-danger">Submit</button>
             </div>
         </div>
         <script src="Resources/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+        <script src="Resources/bootstrap-3.3.5-dist/js/jquery.js"></script>
     </body>
 </html>
